--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 header{
   height:180px;
   width:100%;
-  background-color: #ddd6d6;
+  background-color: #cfcfcf;
 }
 #seats{
   padding: 30px 30px 30px 50px;
@@ -16,4 +16,17 @@ header{
   height: calc(100vh - 180px);
   margin: auto;
   background-color: #f2f2f2;
+}
+#rows{
+  width:30px;
+  border-radius: 15px;
+  position: absolute;
+  left:20px;
+  top:216px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+text{
+  fill:#fff;
 }
